Update .gitignore to block all build files across OSs

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
-bspectra_lib_linux.o
-bspectra_linux.o
-egs_advanced_application_lib_linux.o
-egs_advanced_application_linux.o
-egs_interface2_linux.o
-egsnrc_linux.F
-egsnrc_linux.mortlst
-egsnrc_linux.o
+*.o
+egsnrc_*.F
+egsnrc_*.mortlst
 mortjob.mortran
+view_debug
