--- a/beta-spectra-histogram.egsinp.template
+++ b/beta-spectra-histogram.egsinp.template
@@ -30,6 +30,136 @@
 
 #-------------------------------------------------------------------------------
 # A gold MMC 
+:start geometry definition:
+
+    # An air box that will hold the entire geometry
+    :start geometry:
+        name = box
+        library = egs_glib
+        :start geometry definition:
+
+            :start geometry:
+
+                name = xyz_50cmx50cmx50cm_box
+                library = egs_box
+                box size = 50
+      
+                :start media input:
+                    media = AIR_TG43
+                :stop media input:
+
+            :stop geometry:
+
+            simulation geometry = xyz_50cmx50cmx50cm_box
+
+        :stop geometry definition:
+    :stop geometry:
+
+	# The volume in which we want to dose score (the gold MMC)
+    :start geometry:
+		name = phantom
+        library = egs_glib
+        ##Geometry for gold MMC cube 0.6mm^3
+        ## -0.03cm <= X, Y, Z <= 0.03cm with 1 voxel
+        :start geometry definition:
+
+            :start geometry:
+
+                name = xyz_0.06cmx0.06cmx0.06cm_0.03mm
+                library = egs_ndgeometry
+                type    = EGS_XYZGeometry
+
+                x-slabs = -0.03, 0.06, 1
+                y-slabs = -0.03, 0.06, 1
+                z-slabs = -0.03, 0.06, 1
+
+                :start media input:
+                    media = Au
+                :stop media input:
+
+            :stop geometry:
+
+            simulation geometry = xyz_0.06cmx0.06cmx0.06cm_0.03mm
+
+        :stop geometry definition:
+		
+    :stop geometry:
+	
+	# The source geometry
+    :start geometry:
+        name = seed
+        library = egs_glib
+        :start geometry definition:
+
+            :start geometry:
+                library = egs_spheres
+                name = point
+                midpoint = 0 0 0
+                type = EGS_cSpheres
+                radii = 0.0001
+
+                :start media input:
+                    media = AIR_TG43_LD
+                    set medium = 0 0
+                :stop media input:
+            :stop geometry:
+
+            simulation geometry = point
+
+        :stop geometry definition:
+    :stop geometry:
+	
+    # Inscribe the seed in the scoring phantom
+    :start geometry:
+        name = phantom_with_seed
+        library = egs_genvelope
+        base geometry = phantom
+        inscribed geometries = seed
+    :stop geometry:
+
+    # Inscribe the phantom+seed in the large air box
+    :start geometry:
+        name = final
+        library = egs_genvelope
+        base geometry = box
+        inscribed geometries = phantom_with_seed
+    :stop geometry:
+
+    # Source, phantom, and simulation geometries all need to be explicitly 
+    # specified to egs_brachy
+
+    source geometries = seed
+
+    phantom geometries = phantom
+
+    simulation geometry = final
+
+:stop geometry definition:
+
+#-------------------------------------------------------------------------------
+:start volume correction:
+
+    # Scoring voxels which contain source geometries need to have their 
+    # volumes corrected to accurately score dose
+  :start source volume correction:
+      correction type = correct
+      density of random points (cm^-3) = 1E8
+
+      # This is a shape that encompasses the entire source geometry.
+      # Volume correction will only occur within the boundaries of this shape.
+      # Shape to define the bounding volume for volume correction and region discovery
+      :start shape:
+
+          type = sphere
+          radius = 0.00011
+          midpoint = 0 0 0
+
+      :stop shape:
+  :stop source volume correction:
+
+:stop volume correction:
+
+#-------------------------------------------------------------------------------
 :start source definition:
 
     # Typical egs++ source input block
